---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2024-11-08
  Bugfixes:
    - Commands should no longer crash when entered from a server console
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2024-11-07
  Changes:
    - Updated shortcodes for 2.0
  Features:
    - Added a global setting to change how normal messages are sent.
    - Added /t and /team commands to send messages normally.
    - Added option to show timestamps next to each message. These are in-game time, as real time is simply not something mods can get.
    - Added imagify support for planets and space-locations (wrapped under the same setting)
  Commands:
    - Replicated /help & /h
    - Replicated /clear
    - Replicated /admins
    - Replicated /players
      - Doesn't behave exactly the same, but similar enough.
  Bugfixes:
    - Stops trying to imagify qualitied tags
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2024-10-21
  Changes:
    - Made compatible with 2.0
  Features:
    - You can now specify a shortcode variation (eg `:wood~1:`) for instances of conflicting shortcodes.
      A variation of 0 is the same as no variation.
    - Now, in singleplayer, replaces shortcodes within a levenshtein distance of 2 to account for typos. This does not work if you specify a variety other than 0 (the default)
      This is limited to singleplayer because it still hitches badly. I will gladly welcome people who know more than me optimizing it!
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2024-08-23
  Features: