@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.3
 Date: ????
-  Changes:
+  Features:
+    - Added an api for modifying sent messages. The intent being the ability to filter
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.2
 Date: 2024-11-08
